--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,39 @@
 		<spring-cloud.version>Edgware.RELEASE</spring-cloud.version>
 		<wiremock.version>2.12.0</wiremock.version>
 		<cucumber.version>2.3.1</cucumber.version>
+		<restassured.version>3.0.3</restassured.version>
 	</properties>
 
 	<modules>
 		<module>calendar-aggregator-boot</module>
 		<module>calendar-aggregator-test</module>
 	</modules>
+
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<skip.server.start>true</skip.server.start>
+				<skip.functional.tests>true</skip.functional.tests>
+			</properties>
+		</profile>
+		<profile>
+			<id>ft</id>
+			<!--<activation>-->
+				<!--<property>-->
+					<!--<name>ft</name>-->
+					<!--<value>true</value>-->
+				<!--</property>-->
+			<!--</activation>-->
+			<properties>
+				<skip.server.start>false</skip.server.start>
+				<skip.functional.tests>false</skip.functional.tests>
+			</properties>
+		</profile>
+	</profiles>
 
 	<dependencyManagement>
 		<dependencies>
@@ -56,6 +83,12 @@
 				<groupId>io.cucumber</groupId>
 				<artifactId>cucumber-junit</artifactId>
 				<version>${cucumber.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.rest-assured</groupId>
+				<artifactId>rest-assured</artifactId>
+				<version>${restassured.version}</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
