--- a/calendar-aggregator-boot/src/main/resources/application.properties
+++ b/calendar-aggregator-boot/src/main/resources/application.properties
@@ -7,3 +7,6 @@ google.getAppointmentsEndPoint=/appointments
 # Outlook properties
 outlook.baseUrl=http://localhost:9081/outlook
 outlook.getAppointmentsEndPoint=/appointments
+
+# Activate profiles
+spring.profiles.active=@activatedProperties@
