branching for ING presentation

--- a/calendar-aggregator-boot/src/main/resources/application.properties
+++ b/calendar-aggregator-boot/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 
-# Google properties
-google.baseUrl=http://localhost:9081/google
-google.getAppointmentsEndPoint=/appointments
+# Debit Cards properties
+debit.baseUrl=http://localhost:9081/api/gDebitCards
+debit.getCardsEndPoint=/cards
 
-# Outlook properties
-outlook.baseUrl=http://localhost:9081/outlook
-outlook.getAppointmentsEndPoint=/appointments
+# Credit Cards properties
+credit.baseUrl=http://localhost:9081/api/gCreditCards
+credit.getCardsEndPoint=/cards
