fully working, all tests pass

--- a/calendar-aggregator-boot/src/main/resources/application-stubbed.properties
+++ b/calendar-aggregator-boot/src/main/resources/application-stubbed.properties
@@ -2,8 +2,8 @@ server.port=8081
 
 # Debit Cards properties
 debit.baseUrl=http://localhost:9081/api/gDebitCards
-debit.getCardsEndPoint=/cards
+debit.getCardsEndPoint=/debit-cards
 
 # Credit Cards properties
 credit.baseUrl=http://localhost:9081/api/gCreditCards
-credit.getCardsEndPoint=/cards
+credit.getCardsEndPoint=/credit-cards
