--- a/calendar-aggregator-test/pom.xml
+++ b/calendar-aggregator-test/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>cucumber-junit</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-picocontainer</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
         </dependency>
